--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,8 @@ footer {
   height: 5rem;
   box-shadow: 0 -2px 3px #00000069;
 }
+footer .social-buttons .social-media-button {
+  margin: 0.5rem 0.25rem;
+}
 
 /*# sourceMappingURL=App.css.map */
