--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,31 @@ main {
   min-height: 50rem;
   padding: 2rem 0;
 }
+main .slide-drawer {
+  border: 1px solid black;
+  height: 100%;
+  width: 40%;
+  background: white;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 200;
+  box-shadow: 1px 0px 7px #00000069;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-out;
+}
+main .slide-drawer.open {
+  transform: translateX(0);
+}
+main .backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+  top: 0;
+  right: 0;
+}
 
 footer {
   height: 5rem;
