--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
+  font-family: Avenir Next, sans-serif;
 }
 
 header {
   height: 5rem;
-  box-shadow: 0 2px 3px #00000069;
 }
 header .navigation {
   display: flex;
@@ -35,7 +35,25 @@ main .slide-drawer {
 main .slide-drawer.open {
   transform: translateX(0);
 }
-main .backdrop {
+main .macrame-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+main .macrame-card {
+  display: flex;
+  justify-content: space-between;
+  max-width: 30rem;
+  max-height: 30rem;
+  margin: 1rem;
+  padding: 0.25rem;
+  box-shadow: 2px 2px 3px rgba(192, 192, 192, 0.767);
+}
+main .macrame-card > img {
+  width: 100%;
+  height: 100%;
+}
+main .slide-drawer-backdrop {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -46,7 +64,7 @@ main .backdrop {
 }
 
 footer {
-  height: 5rem;
+  height: 1rem;
   box-shadow: 0 -2px 3px #00000069;
 }
 footer .social-buttons .social-media-button {
