--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 
 header {
     height: 5rem;
-    box-shadow: 0 2px 3px #00000069;
+    // box-shadow: 0 2px 3px #00000069;
 
     .navigation {
         display: flex;
@@ -44,11 +44,32 @@ main {
         }
     }
 
-    .backdrop {
+    .macrame-container {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        }
+        
+        .macrame-card {
+        display: flex;
+        justify-content: space-between;
+        max-width: 30rem;
+        max-height: 30rem;
+        margin: 1rem;
+        padding: 0.25rem;
+        box-shadow: 2px 2px 3px rgba(192, 192, 192, 0.767);
+        
+        > img {
+            width: 100%;
+            height: 100%;
+        }
+    }   
+
+    .slide-drawer-backdrop {
         position: fixed;
         width: 100%;
         height: 100%;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0, 0, 0, 0.5);
         z-index: 100;
         top: 0;
         right: 0;
@@ -56,7 +77,7 @@ main {
 }
 
 footer {
-    height: 5rem;
+    height: 1rem;
     box-shadow: 0 -2px 3px #00000069;
 
     .social-buttons {
