--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ header .navigation {
 header .navigation .active {
   color: red;
 }
+header .navigation > img {
+  max-height: 100%;
+  max-width: 100%;
+}
 
 main {
   min-height: 50rem;
@@ -48,10 +52,43 @@ main .macrame-card {
   margin: 1rem;
   padding: 0.25rem;
   box-shadow: 2px 2px 3px rgba(192, 192, 192, 0.767);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  transition: transform 1s, backdrop-filter 1s;
+}
+main .macrame-card > .title-div {
+  display: none;
+}
+main .macrame-card:hover {
+  transform: scale(1.1);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+main .macrame-card:hover .title-div {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.2);
+  justify-content: center;
+  backdrop-filter: blur(10.5px);
+  -webkit-backdrop-filter: blur(10.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  z-index: 1;
+}
+main .macrame-card:hover .title-div > p {
+  display: inline;
 }
 main .macrame-card > img {
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 main .slide-drawer-backdrop {
   position: fixed;
@@ -66,6 +103,10 @@ main .slide-drawer-backdrop {
 footer {
   height: 1rem;
   box-shadow: 0 -2px 3px #00000069;
+}
+footer .share {
+  padding-top: 1rem;
+  font-weight: bold;
 }
 footer .social-buttons .social-media-button {
   margin: 0.5rem 0.25rem;
