--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,11 @@ header {
         .active {
             color: red;
         }
+
+        > img {
+            max-height: 100%;
+            max-width: 100%;
+        }
         
     }
 }
@@ -51,19 +56,59 @@ main {
         }
         
         .macrame-card {
-        display: flex;
-        justify-content: space-between;
-        max-width: 30rem;
-        max-height: 30rem;
-        margin: 1rem;
-        padding: 0.25rem;
-        box-shadow: 2px 2px 3px rgba(192, 192, 192, 0.767);
+            display: flex;
+            justify-content: space-between;
+            max-width: 30rem;
+            max-height: 30rem;
+            margin: 1rem;
+            padding: 0.25rem;
+            box-shadow: 2px 2px 3px rgba(192, 192, 192, 0.767);
+            border-radius: 10px;
+            border: 1px solid rgba( 255, 255, 255, 0.18 );
+            transition: transform 1s, backdrop-filter 1s;
+
+            > .title-div {
+                display: none;
+            }
+
+            &:hover {
+                transform: scale(1.10);
+                border-radius: 10px;
+                border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+                .title-div {
+                    position: absolute;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba( 255, 255, 255, 0.20 );
+                    // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+                    // box-shadow: 2px 2px 3px rgba(192, 192, 192, 0.767);
+                    justify-content: center;
+                    backdrop-filter: blur( 10.5px );
+                    -webkit-backdrop-filter: blur( 10.5px );
+                    border-radius: 10px;
+                    border: 1px solid rgba( 255, 255, 255, 0.18 );
+                    z-index: 1;
+
+                    > p {
+                        display: inline;
+                    }
+                }
+            }
         
-        > img {
-            width: 100%;
-            height: 100%;
-        }
-    }   
+            > img {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                z-index: 0;
+                border-radius: 10px;
+                border: 1px solid rgba( 255, 255, 255, 0.18 );
+            } 
+
+        }   
 
     .slide-drawer-backdrop {
         position: fixed;
@@ -79,6 +124,11 @@ main {
 footer {
     height: 1rem;
     box-shadow: 0 -2px 3px #00000069;
+
+    .share {
+        padding-top: 1rem;
+        font-weight: bold;
+    }
 
     .social-buttons {
         // display: flex;
